[package]
name = "allocator"
version = "0.1.0"
authors = ["Phlopsi <nbphobos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-mutex = "*"
parking_lot = "*"
antidote = "*"

[dev-dependencies]
criterion = "*"
crossbeam-utils = "*"

[[bench]]
name = "my_benchmark"
harness = false
