[package]
name = "allocator"
version = "0.1.0"
authors = ["Patrick 'Phlopsi' Fischer <nbphobos@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-mutex = "*"
parking_lot = "*"
antidote = "*"

[dev-dependencies]
criterion = "*"
crossbeam-utils = "*"

[[bench]]
name = "my_benchmark"
harness = false
